--- a/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/index.html
+++ b/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/index.html
@@ -216,7 +216,7 @@
     <ul class="videos__container"></ul>
 
     <!-- <Seção rodapé> -->
-    <footer class="c">
+    <footer class="rodape__container">
       <section>
         <h2 class="rodape__titulo">Programação</h2>
         <p class="rodape__texto">Lógica</p>
