--- a/The_Odin_Project/Lading_Page/testes/indexteste.html
+++ b/The_Odin_Project/Lading_Page/testes/indexteste.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="resetteste.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+    <link rel="stylesheet" type="text/css" href="estiloteste.css" />
     <title>Bem-vindo</title>
   </head>
   <body>
     <header>
       <nav class="header_container">
         <a class="nav_item" href="#">Pessoal</a>
-        <a class="nav_item" href="#">Profissional</a>
         <a class="nav_item" href="#">Contato</a>
+        <a class="nav_item" href="#">Profissional</a>
       </nav>
     </header>
     <main>
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="container_foto intro_item">
-          <img class="minha_foto" src="./image/minhaFoto.jpg" />
+          <img class="minha_foto" src="../image/minhaFoto.jpg" />
         </div>
       </div>
     </main>
